--- a/examples/website/pointcloud/index.html
+++ b/examples/website/pointcloud/index.html
@@ -23,7 +23,7 @@
     <div id="app"></div>
   </body>
   <script type="module">
-    import {renderToDOM} from './app.tsx';
+    import {renderToDOM} from './app-arrow.tsx';
     renderToDOM(document.getElementById('app'));
   </script>
 </html>
