--- a/examples-experimental/point-tile-source/index.html
+++ b/examples-experimental/point-tile-source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
-    <title>Potree visualization</title>
+    <title>Point tile source visualization</title>
     <style>
       html {
         height: 100%;
